--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main] # Se activa cada vez que subes cambios a la rama 'main'
+    branches: [main]
 
 jobs:
   build-and-deploy:
@@ -15,6 +15,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          # Forzamos una versión de Flutter que sabemos que es compatible.
+          flutter-version: '3.13.0'
 
       - name: Install dependencies
         run: flutter pub get
